--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn run build
 
       - name: Deploy To S3
-        run: aws s3 sync ./build s3://${{ secrets.BUCKET_NAME }}
+        run: aws s3 sync ./dist s3://${{ secrets.BUCKET_NAME }}
 
       - name: Create Cloudfront Invalidation
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
