--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ name: Deploy Website
 on:
   push:
     branches: [ main ]
-
   workflow_dispatch:
 
 jobs:
@@ -12,23 +11,28 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Install Modules
-        run: yarn install
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Build Application
         run: yarn run build
 
-      - name: Deploy To S3
+      - name: Deploy to S3
         run: aws s3 sync ./dist s3://${{ secrets.BUCKET_NAME }}
 
-      - name: Create Cloudfront Invalidation
+      - name: Create CloudFront Invalidation
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
